MAP-962 Improve roll count ordering in prison api (#2154)
Expanded RollCount model class to include location details and implemented SortAttribute interface for sorting. Also, restructured MovementsRepository to sort RollCounts in natural order. Updated corresponding tests to reflect these changes.